--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "functions": {
     "api/webhook.py": {
-      "runtime": "python3.9"
+      "runtime": "vercel-python@0.6.2",
+      "maxDuration": 10
     }
   },
   "routes": [
