--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/webhook.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
-      "src": "/webhook",
+      "src": "/(.*)",
       "dest": "api/webhook.py"
     }
   ]
