--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: Call Vercel Daily Endpoint
         run: |
-          curl -X GET "https://whatsappagent-ivory.vercel.app/api/daily"
+          curl -X GET "https://whatsappagent-hibas-projects-422342d6.vercel.app/api/daily/"
