update cron to 12:20 Morocco time

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: Daily WhatsApp Sender
 
 on:
   schedule:
-    - cron: "40 1 * * *"   # 02:40 UTC
+    - cron: "20 11 * * *"   # 12:20 Morocco time (UTC+1)
   workflow_dispatch:
 
 # daily.yml
