--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/app.py", "use": "@vercel/python" }
+    { "src": "app.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/webhook", "dest": "api/app.py" },
-    { "src": "/daily", "dest": "api/app.py" },
-    { "src": "/.*", "dest": "api/app.py" }
+    { "src": "/daily", "dest": "/app.py" },
+    { "src": "/webhook", "dest": "/app.py" },
+    { "src": "/.*", "dest": "/app.py" }
   ],
   "crons": [
     {
       "path": "/daily",
-      "schedule": "40 02 * * *"
+      "schedule": "40 2 * * *"
     }
   ]
 }
